[package]
name = "port"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7"
smallvec = { version = "1.11", features = ["const_generics"] }
rayon = "1.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
env_logger = "0.10"
log = "0.4"
chrono = "0.4"
chrono-tz = "0.8"
async-trait = "0.1"
# Removed: governor - now handled by port-etl
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
tracing = "0.1"
anyhow = "1.0"
# Removed: reqwest, futures, influxdb2, influxdb2-structmap - now handled by port-etl
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
ordered-float = "3.0"
port-etl = { path = "../etl" }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[lib]
name = "port"
path = "src/lib.rs"

[[bin]]
name = "api-server"
path = "src/main.rs"